# autoftresearch

./: .gitignore  PLAN.md  README.md  config.json  prepare.py  program.md  pyproject.toml  strategy.py
