[project]
name = "autoftresearch"
version = "0.1.0"
description = "Autonomous quantitative strategy research using freqtrade"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "freqtrade>=2026.2",
    "freqtrade[hyperopt]",
    "pandas-ta>=0.3.14b",
    "matplotlib>=3.9.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
analysis = [
    "plotly>=5.0",
    "ipykernel",
    "jupyter",
]
